nx-libs (2:3.5.0.11-0) UNRELEASED; urgency=low

  [ Mike Gabriel ]
  * Use ,,$(MAKE) -C'' in main Makefile for calling Makefiles in subdirectories,
    make build stanza work for nx-libs-full and nx-libs-lite.
  * Do not install libXinerama directly into /usr/lib/nx. Recommended method is
    installing to /usr/lib/nx/Xinerama, so that you can enable/disable usage of
    the Xinerama extension.

  [ Jan Engelhardt ]
  * Update patch: 001_add-main-makefile.full+lite.patch, allow passing of
    configure args.
  * Add patch: 030_nx-X11_configure-args.diff. Allow passing of configure args.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 07 Feb 2012 13:48:19 +0100

nx-libs (2:3.5.0.10-0) unstable; urgency=low

  * Add patch: 006_nxcomp_libpng15.full+lite.patch, fix build against
    libpng 1.5.x.
  * Reintroduce patch: 008_nxcomp_sa_restorer.full+lite.patch, now in a
    version found on etersoft.ru, fixes build on ia64 architecture.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 07 Feb 2012 13:43:50 +0100

nx-libs (2:3.5.0.9-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Providing pending patches in source tree.

  [ Oleksandr Shneyder ]
  * Update patch: 202_nx-x11_enable-xinerama.full.patch, disable Xinerama
    extension if NX_XINERAMA_CONF not exists.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 01 Feb 2012 14:39:57 +0100

nx-libs (2:3.5.0.8-0) unstable; urgency=low

  * Reorganize patch names, to reflect patch inclusion into lite+full or
    full-only ,,NX (redistributed)'' tarball.
  * Update patch: 001_add-main-makefile.full+lite.patch, only build, install,
    clean etc. NX subprojects if the folder exists.
  * Package x2goagent is an ,,all'' package, not ,,any''.
  * Add folder /debian/patches-pending-evaluation with two newly discovered
    patches from git.etersoft.ru (AltLinux packaging repository for NX).
  * Fix patch: 109_nxagent_locale-utf8-compound-text.patch, fix crashes